udalenie akkaunta: otsrochka 30 dney i obezlichivanie (TZ 2.3, 4.3)
